# rusty_lines

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  gap-analysis.md
.github/workflows/: ci.yml
bench/: Cargo.toml
bench/src/: main.rs
docs/: RELEASING.md  survey.md
examples/: bell_visible.rs  columns.rs  demo.rs  hooked.rs  initial.rs  initial_timeout.rs  notify.rs  query_items.rs  rprompt.rs  terminal_facilities.rs  timeout.rs  vi.rs
src/: lib.rs  term_sys.rs
tests/: pty.rs  windows_raw_mode.rs
