[package]
name = "rusty_lines"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT"
description = "A hand-rolled readline alternative: emacs + vi keymaps, kill ring, undo, incremental/prefix history search, bracketed paste, completion/hint/highlight hooks, and a right-side prompt."
repository = "https://github.com/baileyrd/rusty_lines"
keywords = ["readline", "line-editor", "repl", "terminal", "cli"]
categories = ["command-line-interface"]
# Git-based releases only (tags + GitHub releases); consumers use the git
# dependency. See docs/RELEASING.md.
publish = false

[dependencies]
# Display-column widths for the render engine — Unicode tables only.
unicode-width = "0.2"

[features]
# Default: back the Unix terminal surface (termios/poll/read/winsize) with the
# `libc` crate — the stable, portable backend.
default = ["libc-backend"]
libc-backend = ["dep:libc"]
# Back it with the hand-rolled raw-syscall crate instead (Linux only, zero
# third-party deps). With `--no-default-features --features rusty-libc`, libc is
# not linked at all. When both are enabled, rusty-libc wins.
rusty-libc = ["dep:rusty_libc"]

# Raw terminal mode (termios), poll, and window size are Unix-only. Non-Unix
# builds fall back to a plain buffered read and need neither backend.
[target.'cfg(unix)'.dependencies]
# Default backend — optional so a rusty-libc-only build links no libc.
libc = { version = "0.2", optional = true }
# Optional zero-dependency raw-syscall backend (Linux only).
rusty_libc = { git = "https://github.com/baileyrd/rusty_libc", branch = "main", optional = true }

# The pty end-to-end tests (tests/pty.rs) drive examples/demo under a
# pseudo-terminal.
[target.'cfg(unix)'.dev-dependencies]
libc = "0.2"
