[package]
name = "rusty_lines"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT"
description = "A hand-rolled readline alternative: emacs + vi keymaps, kill ring, undo, incremental/prefix history search, bracketed paste, completion/hint/highlight hooks, and a right-side prompt."
repository = "https://github.com/baileyrd/rusty_lines"
keywords = ["readline", "line-editor", "repl", "terminal", "cli"]
categories = ["command-line-interface"]
# Git-based releases only (tags + GitHub releases); consumers use the git
# dependency. See docs/RELEASING.md.
publish = false

[dependencies]
# Display-column widths for the render engine — Unicode tables only.
unicode-width = "0.2"

[features]
# The terminal surface (termios/poll/read/winsize) is backed by the hand-rolled
# raw-syscall crate by default. That is Linux-only, so the backend is actually
# chosen by target: `rusty_libc` on Linux, the `libc` crate on other Unix (see
# the cfgs in `term_sys.rs`). `libc-backend` is an escape hatch to force the
# libc backend on Linux too (`--no-default-features --features libc-backend`).
default = ["rusty-libc"]
rusty-libc = ["dep:rusty_libc"]
libc-backend = ["dep:libc"]

# Raw terminal mode (termios), poll, and window size are Unix-only. Non-Unix
# builds fall back to a plain buffered read and need neither backend.

# Linux: `rusty_libc` is the default backend; `libc` only when forced.
[target.'cfg(target_os = "linux")'.dependencies]
rusty_libc = { git = "https://github.com/baileyrd/rusty_libc", branch = "main", optional = true }
libc = { version = "0.2", optional = true }

# Other Unix (macOS/BSD): the libc backend is the only option — `rusty_libc` is
# Linux-only — so libc is a plain dependency there.
[target.'cfg(all(unix, not(target_os = "linux")))'.dependencies]
libc = "0.2"

# The pty end-to-end tests (tests/pty.rs) drive examples/demo under a
# pseudo-terminal.
[target.'cfg(unix)'.dev-dependencies]
libc = "0.2"
