[package]
name = "rusty_lines"
version = "0.4.0"
edition = "2024"
rust-version = "1.88"
license = "MIT"
description = "A hand-rolled readline alternative: emacs + vi keymaps, kill ring, undo, incremental/prefix history search, bracketed paste, completion/hint/highlight hooks, and a right-side prompt."
repository = "https://github.com/baileyrd/rusty_lines"
keywords = ["readline", "line-editor", "repl", "terminal", "cli"]
categories = ["command-line-interface"]
# Git-based releases only (tags + GitHub releases); consumers use the git
# dependency. See docs/RELEASING.md.
publish = false

[dependencies]
# Display-column widths for the render engine — Unicode tables only.
unicode-width = "0.2"

[features]
# The Unix terminal surface (termios/poll/read/winsize) is backed by the
# hand-rolled raw-syscall crate by default. That is Linux-only, so the
# backend is actually chosen by target: `rusty_libc` on Linux, the `libc`
# crate on other Unix (see the cfgs in `term_sys.rs`). `libc-backend` is an
# escape hatch to force the libc backend on Linux too
# (`--no-default-features --features libc-backend`). Windows always uses
# `rusty_win32` — there is no equivalent escape hatch there, since it's the
# only backend this crate has for that platform.
default = ["rusty-libc"]
rusty-libc = ["dep:rusty_libc"]
libc-backend = ["dep:libc"]

# Linux: `rusty_libc` is the default backend; `libc` only when forced.
[target.'cfg(target_os = "linux")'.dependencies]
rusty_libc = { git = "https://github.com/baileyrd/rusty_libc", branch = "main", optional = true }
libc = { version = "0.2", optional = true }

# Other Unix (macOS/BSD): the libc backend is the only option — `rusty_libc` is
# Linux-only — so libc is a plain dependency there. Not CI-verified on a real
# macOS/BSD runner (CI dropped its macos-latest job — see
# .github/workflows/ci.yml's `libc-backend` comment); this code path is
# exercised on Linux only, via that job's `--features libc-backend` escape
# hatch.
[target.'cfg(all(unix, not(target_os = "linux")))'.dependencies]
libc = "0.2"

# Windows: GetConsoleMode/SetConsoleMode/ReadFile/WaitForSingleObject/
# GetConsoleScreenBufferInfo via `rusty_win32` — the Windows counterpart of
# the Unix termios/poll/read/winsize surface above (see `term_sys.rs`'s
# Windows backend).
[target.'cfg(windows)'.dependencies]
rusty_win32 = { git = "https://github.com/baileyrd/rusty_win32", branch = "main", features = ["std"] }

# The pty end-to-end tests (tests/pty.rs) drive examples/demo under a
# pseudo-terminal.
[target.'cfg(unix)'.dev-dependencies]
libc = "0.2"
