# Head-to-head benchmark harness: rusty_lines vs rustyline vs reedline.
# Deliberately NOT a workspace member of the root crate — the editor
# itself stays dependency-free; this crate pulls in the competitors and
# is built/run only on demand:
#
#     cd bench && cargo run --release
#
[package]
name = "editor-bench"
default-run = "editor-bench"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
libc = "0.2"
rusty_lines = { path = ".." }
rustyline = "14"
reedline = "0.38"
